# itkMeshIO

./: CMakeLists.txt  README.txt
Data/: input.vtk  lh.aparc.gii  lh.bert.pial.gii  lh.thickness.fcv  sphere_normals.vtk
Examples/: CMakeLists.txt  ConvertMesh.cxx
MeshIO/: CMakeLists.txt  itkBYUMeshIO.cxx  itkBYUMeshIO.h  itkBYUMeshIOFactory.cxx  itkBYUMeshIOFactory.h  itkConvertArrayPixelBuffer.h  itkConvertArrayPixelBuffer.txx  itkConvertVariableLengthVectorPixelBuffer.h  itkConvertVariableLengthVectorPixelBuffer.txx  itkFreeSurferAsciiMeshIO.cxx  itkFreeSurferAsciiMeshIO.h  itkFreeSurferAsciiMeshIOFactory.cxx  itkFreeSurferAsciiMeshIOFactory.h  itkFreeSurferBinaryMeshIO.cxx  itkFreeSurferBinaryMeshIO.h  itkFreeSurferBinaryMeshIOFactory.cxx  itkFreeSurferBinaryMeshIOFactory.h  itkGiftiMeshIO.cxx  itkGiftiMeshIO.h  itkGiftiMeshIOFactory.cxx  itkGiftiMeshIOFactory.h  itkMeshConvertPixelTraits.h  itkMeshFileReader.h  itkMeshFileReader.hxx  itkMeshFileReader.txx  itkMeshFileWriter.h  itkMeshFileWriter.hxx  itkMeshFileWriter.txx  itkMeshIOBase.cxx  itkMeshIOBase.h  itkMeshIOFactory.cxx  itkMeshIOFactory.h  itkOBJMeshIO.cxx  itkOBJMeshIO.h  itkOBJMeshIOFactory.cxx  itkOBJMeshIOFactory.h  itkOFFMeshIO.cxx  itkOFFMeshIO.h  itkOFFMeshIOFactory.cxx  itkOFFMeshIOFactory.h  (+4 more)
MeshIOOld/: itkFreeSurferBinaryMeshIO.cxx  itkFreeSurferBinaryMeshIO.h  itkGiftiMeshIO.cxx  itkGiftiMeshIO.h  itkGiftiMeshIOFactory.cxx  itkMeshFileReader.h  itkMeshFileReader.txx  itkMeshFileWriter.h  itkMeshFileWriter.txx  itkMeshIOBase.cxx  itkMeshIOBase.h  itkVTKPolyDataMeshIO.h
Testing/: CMakeLists.txt  MeshFileReadWriteTest.cxx  MeshFileReadWriteVectorAttributeTest.cxx  MeshFileTestHelper.h  PolylineReadWriteTest.cxx
Utilities/: CMakeLists.txt
Utilities/KWStyle/CVS/: Entries  Tag  Template
Utilities/gifticlib/: CMakeLists.txt  gifti_io.c  gifti_xml.c
