# THE PROJECT IS MEDICAL IMAGE ANALYSIS TOOLKIT
# ON WINDOWS(32 AND 64). MUST INCLUDE *.h FILES TO LET THEM SHOW IN VISUAL STUDIO IDE

IF(WIN32)
	FILE(GLOB_RECURSE MeshIO_SRCS ${PROJECT_SOURCE_DIR}/MeshIO  ${PROJECT_SOURCE_DIR}/MeshIO/*.hpp  ${PROJECT_SOURCE_DIR}/MeshIO/*.cxx)
ELSE(WIN32)
	FILE(GLOB_RECURSE MeshIO_SRCS ${PROJECT_SOURCE_DIR}/MeshIO ${PROJECT_SOURCE_DIR}/MeshIO/*.cxx)
ENDIF(WIN32)

ADD_LIBRARY(ITKMeshIO ${BUILD_TYPE} ${MeshIO_SRCS})
TARGET_LINK_LIBRARIES(ITKMeshIO ITKgiftiio ${ITK_LIBRARIES})
