if(WIN32)
  file(GLOB_RECURSE MeshIO_SRCS ${CMAKE_CURRENT_SOURCE_DIR}  ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp  ${CMAKE_CURRENT_SOURCE_DIR}/*.cxx)
else(WIN32)
  file(GLOB_RECURSE MeshIO_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/MeshIO ${CMAKE_CURRENT_SOURCE_DIR}/*.cxx)
endif(WIN32)

add_library(ITKMeshIO ${BUILD_TYPE} ${MeshIO_SRCS})
target_link_libraries(ITKMeshIO ITKgiftiio ${ITK_LIBRARIES})
